--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Portfolio</title>
+  <!-- I have added font awesomne here for development purposes,it will be overwritten in build -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
 <body>
